# Baldur-s-Gate-3-Linux-Native-Camera-Tweaks

./: CMakeLists.txt  README.md  compile.sh  main.c
src/: main.c  offsets.h  sdl_bindings.h  utils.h
